Set up a test environment to test thoroughly test onchain functionality of the resultant encrypted json

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,7 +5,8 @@
     "moduleResolution": "node16",
     "sourceMap": true,
     "outDir": "./dist/",
-    "sourceRoot": "./src"
+    "sourceRoot": "./src",
+    "esModuleInterop": true
   },
   "exclude": ["node_modules", "**/*.spec.ts"]
 }
