--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,15 @@
 /node_modules
 /dist
 *.tgz
+
+node_modules
+.env
+coverage
+coverage.json
+typechain
+typechain-types
+
+# Hardhat files
+cache
+artifacts
+
