--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
   "preferGlobal": true,
   "scripts": {
     "start": "ts-node src/index.ts",
-    "build": "tsc -p ."
+    "build": "tsc -p .",
+    "test": "hardhat test"
   },
   "repository": {
     "type": "git",
@@ -23,10 +24,16 @@
   },
   "homepage": "https://github.com/skarard/encrypted-ethers-wallet#readme",
   "devDependencies": {
+    "@nomicfoundation/hardhat-toolbox": "^2.0.1",
+    "@types/mocha": "^10.0.1",
+    "@types/test-console": "^2.0.0",
+    "hardhat": "^2.12.7",
+    "mock-stdin": "^1.0.0",
+    "test-console": "^2.0.0",
     "ts-node": "^10.9.1",
     "typescript": "^4.9.5"
   },
   "dependencies": {
-    "ethers": "^6.0.2"
+    "ethers": "^5.0.2"
   }
 }
