--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,5 +8,5 @@
     "sourceRoot": "./src",
     "esModuleInterop": true
   },
-  "exclude": ["node_modules", "**/*.spec.ts"]
+  "exclude": ["node_modules", "**/*.test.ts", "**/*.config.ts"]
 }
