--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,7 +6,8 @@
     "sourceMap": true,
     "outDir": "./dist/",
     "sourceRoot": "./src",
-    "esModuleInterop": true
+    "esModuleInterop": true,
+    "declaration": true
   },
-  "exclude": ["node_modules", "**/*.test.ts", "**/*.config.ts"]
+  "exclude": ["node_modules", "**/*.test.ts", "**/*.config.ts", "dist"]
 }
