--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,7 +4,7 @@
     "module": "commonjs",
     "moduleResolution": "node16",
     "sourceMap": true,
-    "outDir": "./dist/",
+    "outDir": "./dist",
     "sourceRoot": "./src",
     "esModuleInterop": true,
     "declaration": true
